--- a/index.html
+++ b/index.html
@@ -200,105 +200,249 @@
 
     <section class="benefits">
       <div class="container">
-        <h2 class="benefits__title">What we offer</h2>
+        <h2 class="benefits__title section__title">What we offer</h2>
         <ul>
-          <li>
+          <li class="benefits__item">
             <h3 class="benefits__item--title">Online Courses</h3>
-            <h4 class="benefits__item--subtitle">Our Course are the best among others</h4>
-            <img src="./imgs/li1.jpg" alt="girl working on the computer" class="benefits__img"/>
+            <h4 class="benefits__item--subtitle">
+              Our Courses are the best among others
+            </h4>
+            <img
+              src="./imgs/li1.jpg"
+              alt="girl working on the computer"
+              class="benefits__img"
+            />
             <p class="benefits__descr">
               Lorem ipsum dolor sit at, consectetur adipielit. Facilisi
               fermentum, dignissim pharetra. Aliquam Lorem ipsum dolor sit at,
               consectetur adipielit. Facilisi fermentum, dignissim pharetra.
               Aliquam
             </p>
-            <button type="button" class="benefits__button">Explore our courses</button>
-            <h4>Trending Courses</h4>
-            <ul>
-              <li><img src="./imgs/subli.jpg" alt="" /></li>
-              <li><img src="./imgs/subli2.jpg" alt="" /></li>
-              <li><img src="./imgs/subli3.jpg" alt="" /></li>
-              <li><img src="./imgs/subli.jpg" alt="" /></li>
-            </ul>
-          </li>
-          <li>
-            <h3>Online Exams</h3>
-            <h4>Our Exams prepare you for job opportunity</h4>
-            <img src="./imgs/li2.jpg" alt="woman writing with a pen" />
-            <p>
-              Lorem ipsum dolor sit at, consectetur adipielit. Facilisi
-              fermentum, dignissim pharetra. Aliquam Lorem ipsum dolor sit at,
-              consectetur adipielit. Facilisi fermentum, dignissim pharetra.
-              Aliquam
-            </p>
-            <button type="button">Explore Exams</button>
-            <h5>Test your ability here</h5>
-            <ul>
-              <li><img src="./imgs/subli.jpg" alt="" /></li>
-              <li><img src="./imgs/subli2.jpg" alt="" /></li>
-              <li><img src="./imgs/subli3.jpg" alt="" /></li>
-              <li><img src="./imgs/subli.jpg" alt="" /></li>
-            </ul>
+            <button type="button" class="benefits__button">
+              Explore our courses
+            </button>
+            <h5 class="about__list--title">Trending Courses</h5>
+            <div class="div_for_pos">
+              <ul class="about__list">
+                <li class="about__item">
+                  <img src="./imgs/subli.jpg" alt="" />
+                  <h6 class="about__title">
+                    Game <br />
+                    Development
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli2.jpg" alt="" />
+                  <h6 class="about__title">
+                    Marketing <br />
+                    Strategy
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli3.jpg" alt="" />
+                  <h6 class="about__title">
+                    Data Analysis <br />
+                    With Python
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli.jpg" alt="" />
+                  <h6 class="about__title">
+                    Advanced <br />
+                    UX Designs
+                  </h6>
+                </li>
+              </ul>
+              <button class="scroll_btn">
+                <svg
+                  width="8"
+                  height="10"
+                  viewBox="0 0 8 10"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M1.00388 8.23413L6.15364 4.80096L1.00388 1.36779C0.936251 1.3227 0.878165 1.26474 0.832939 1.1972C0.787712 1.12967 0.75623 1.05389 0.74029 0.974192C0.72435 0.894492 0.724265 0.812433 0.740038 0.7327C0.755812 0.652967 0.787135 0.577121 0.83222 0.509493C0.877305 0.441866 0.935268 0.383781 1.0028 0.338554C1.07033 0.293328 1.14611 0.261846 1.22581 0.245906C1.30551 0.229966 1.38757 0.22988 1.46731 0.245653C1.54704 0.261426 1.62289 0.29275 1.69051 0.337835L7.52828 4.22968C7.62232 4.29239 7.69942 4.37734 7.75275 4.47699C7.80608 4.57665 7.83398 4.68793 7.83398 4.80096C7.83398 4.91399 7.80608 5.02527 7.75275 5.12493C7.69942 5.22458 7.62232 5.30953 7.52828 5.37224L1.69051 9.26408C1.62289 9.30917 1.54704 9.34049 1.46731 9.35626C1.38757 9.37204 1.30551 9.37195 1.22581 9.35601C1.14611 9.34007 1.07033 9.30859 1.0028 9.26336C0.935268 9.21814 0.877305 9.16005 0.83222 9.09242C0.787135 9.0248 0.755812 8.94895 0.740038 8.86922C0.724265 8.78948 0.72435 8.70743 0.74029 8.62773C0.75623 8.54803 0.787712 8.47225 0.832939 8.40471C0.878165 8.33718 0.936251 8.27922 1.00388 8.23413Z"
+                    fill="white"
+                  />
+                </svg>
+              </button>
+            </div>
           </li>
 
-          <li>
-            <h3>Publications</h3>
-            <h4>Publications for best authors</h4>
-            <img src="./imgs/li3.jpg" alt="journal page" />
-            <p>
+          <li class="benefits__item">
+            <h3 class="benefits__item--title">Online Exams</h3>
+            <h4 class="benefits__item--subtitle">
+              Our Exams prepare you for job opportunity
+            </h4>
+            <img
+              src="./imgs/li2.jpg"
+              alt="woman writing with a pen"
+              class="benefits__img"
+            />
+            <p class="benefits__descr">
               Lorem ipsum dolor sit at, consectetur adipielit. Facilisi
               fermentum, dignissim pharetra. Aliquam Lorem ipsum dolor sit at,
               consectetur adipielit. Facilisi fermentum, dignissim pharetra.
               Aliquam
             </p>
-            <button type="button">See publications</button>
-            <ul>
-              <li>
-                <h5>NATURE of Science</h5>
-                <img src="./imgs/pub1.jpg" alt="" />
-              </li>
-              <li>
-                <h5>2022 Astro Report</h5>
-                <img src="./imgs/pub2.jpg" alt="" />
-              </li>
-              <li>
-                <h5>Ata Analysis With Python</h5>
-                <img src="./imgs/pub3.jpg" alt="" />
-              </li>
-              <li>
-                <h5></h5>
-                <img src="./imgs/pub1.jpg" alt="" />
-              </li>
-            </ul>
+            <button type="button" class="benefits__button">
+              Explore Exams
+            </button>
+            <h5 class="about__list--title">Test your ability here</h5>
+            <div class="div_for_pos">
+              <ul class="about__list">
+                <li class="about__item">
+                  <img src="./imgs/subli.jpg" alt="" />
+                  <h6 class="about__title">
+                    Game <br />
+                    Development
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli2.jpg" alt="" />
+                  <h6 class="about__title">
+                    Marketing <br />
+                    Strategy
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli3.jpg" alt="" />
+                  <h6 class="about__title">
+                    Data Analysis <br />
+                    With Python
+                  </h6>
+                </li>
+                <li class="about__item">
+                  <img src="./imgs/subli.jpg" alt="" />
+                  <h6 class="about__title">
+                    Advanced <br />
+                    UX Designs
+                  </h6>
+                </li>
+              </ul>
+              <button class="scroll_btn">
+                <svg
+                  width="8"
+                  height="10"
+                  viewBox="0 0 8 10"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M1.00388 8.23413L6.15364 4.80096L1.00388 1.36779C0.936251 1.3227 0.878165 1.26474 0.832939 1.1972C0.787712 1.12967 0.75623 1.05389 0.74029 0.974192C0.72435 0.894492 0.724265 0.812433 0.740038 0.7327C0.755812 0.652967 0.787135 0.577121 0.83222 0.509493C0.877305 0.441866 0.935268 0.383781 1.0028 0.338554C1.07033 0.293328 1.14611 0.261846 1.22581 0.245906C1.30551 0.229966 1.38757 0.22988 1.46731 0.245653C1.54704 0.261426 1.62289 0.29275 1.69051 0.337835L7.52828 4.22968C7.62232 4.29239 7.69942 4.37734 7.75275 4.47699C7.80608 4.57665 7.83398 4.68793 7.83398 4.80096C7.83398 4.91399 7.80608 5.02527 7.75275 5.12493C7.69942 5.22458 7.62232 5.30953 7.52828 5.37224L1.69051 9.26408C1.62289 9.30917 1.54704 9.34049 1.46731 9.35626C1.38757 9.37204 1.30551 9.37195 1.22581 9.35601C1.14611 9.34007 1.07033 9.30859 1.0028 9.26336C0.935268 9.21814 0.877305 9.16005 0.83222 9.09242C0.787135 9.0248 0.755812 8.94895 0.740038 8.86922C0.724265 8.78948 0.72435 8.70743 0.74029 8.62773C0.75623 8.54803 0.787712 8.47225 0.832939 8.40471C0.878165 8.33718 0.936251 8.27922 1.00388 8.23413Z"
+                    fill="white"
+                  />
+                </svg>
+              </button>
+            </div>
+          </li>
+
+          <li class="benefits__item">
+            <h3 class="benefits__item--title">Publications</h3>
+            <h4 class="benefits__item--subtitle">
+              Publications for best authors
+            </h4>
+            <img
+              src="./imgs/li3.jpg"
+              alt="journal page"
+              class="benefits__img"
+            />
+            <p class="benefits__descr">
+              Lorem ipsum dolor sit at, consectetur adipielit. Facilisi
+              fermentum, dignissim pharetra. Aliquam Lorem ipsum dolor sit at,
+              consectetur adipielit. Facilisi fermentum, dignissim pharetra.
+              Aliquam
+            </p>
+            <button type="button" class="benefits__button">
+              See publications
+            </button>
+            <h5 class="about__list--title">Recent Publication</h5>
+            <div class="div_for_pos">
+              <ul class="about__list">
+                <li class="about__item">
+                  <h6 class="about__title">
+                    NATURE <br />
+                    of Science
+                  </h6>
+                  <img src="./imgs/pub1.jpg" alt="" />
+                </li>
+                <li class="about__item">
+                  <h6 class="about__title">
+                    2022 <br />
+                    Astro Report
+                  </h6>
+                  <img src="./imgs/pub2.jpg" alt="" />
+                </li>
+                <li class="about__item">
+                  <h6 class="about__title">
+                    Data Analysis <br />
+                    With Python
+                  </h6>
+                  <img src="./imgs/pub3.jpg" alt="" />
+                </li>
+                <li class="about__item">
+                  <h6 class="about__title">
+                    Advanced <br />
+                    UX Designs
+                  </h6>
+                  <img src="./imgs/pub1.jpg" alt="" />
+                </li>
+              </ul>
+              <button class="scroll_btn">
+                <svg
+                  width="8"
+                  height="10"
+                  viewBox="0 0 8 10"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M1.00388 8.23413L6.15364 4.80096L1.00388 1.36779C0.936251 1.3227 0.878165 1.26474 0.832939 1.1972C0.787712 1.12967 0.75623 1.05389 0.74029 0.974192C0.72435 0.894492 0.724265 0.812433 0.740038 0.7327C0.755812 0.652967 0.787135 0.577121 0.83222 0.509493C0.877305 0.441866 0.935268 0.383781 1.0028 0.338554C1.07033 0.293328 1.14611 0.261846 1.22581 0.245906C1.30551 0.229966 1.38757 0.22988 1.46731 0.245653C1.54704 0.261426 1.62289 0.29275 1.69051 0.337835L7.52828 4.22968C7.62232 4.29239 7.69942 4.37734 7.75275 4.47699C7.80608 4.57665 7.83398 4.68793 7.83398 4.80096C7.83398 4.91399 7.80608 5.02527 7.75275 5.12493C7.69942 5.22458 7.62232 5.30953 7.52828 5.37224L1.69051 9.26408C1.62289 9.30917 1.54704 9.34049 1.46731 9.35626C1.38757 9.37204 1.30551 9.37195 1.22581 9.35601C1.14611 9.34007 1.07033 9.30859 1.0028 9.26336C0.935268 9.21814 0.877305 9.16005 0.83222 9.09242C0.787135 9.0248 0.755812 8.94895 0.740038 8.86922C0.724265 8.78948 0.72435 8.70743 0.74029 8.62773C0.75623 8.54803 0.787712 8.47225 0.832939 8.40471C0.878165 8.33718 0.936251 8.27922 1.00388 8.23413Z"
+                    fill="white"
+                  />
+                </svg>
+              </button>
+            </div>
           </li>
         </ul>
       </div>
     </section>
 
-    <section>
-      <h2>Notable Instructors</h2>
-      <ul>
-        <li>
-          <img src="./imgs/in1.jpg" alt="" />
-          <h3>Data Analyst</h3>
-          <p>Prof. W.J Khatam</p>
-        </li>
-        <li>
-          <img src="./imgs/in2.jpg" alt="" />
-          <h3>ux designer</h3>
-          <p>Prof. Kaif Kofi O</p>
-        </li>
-        <li>
-          <img src="./imgs/in3.jpg" alt="" />
-          <h3>software Dev.</h3>
-          <p>Prof. Maryam J</p>
-        </li>
-        <li>
-          <img src="./imgs/in4.jpg" alt="" />
-          <h3>Psycologist</h3>
-          <p>Mr. Oluwole B.O</p>
-        </li>
-      </ul>
+    <section class="instructors">
+      <div class="container">
+        <h2 class="section__title">Notable Instructors</h2>
+        <ul class="instructors__list">
+          <li class="instructors__item">
+            <div>
+              <img src="./imgs/in1.jpg" alt="" class="instructors__photo" />
+              <h3 class="instructor__position">Data Analyst</h3>
+              <p class="instructor__name">Prof. W.J Khatam</p>
+            </div>
+          </li>
+          <li class="instructors__item">
+            <img src="./imgs/in2.jpg" alt="" class="instructors__photo" />
+            <h3 class="instructor__position">ux designer</h3>
+            <p class="instructor__name">Prof. Kaif Kofi O</p>
+          </li>
+          <li class="instructors__item">
+            <img src="./imgs/in3.jpg" alt="" class="instructors__photo" />
+            <h3 class="instructor__position">software Dev.</h3>
+            <p class="instructor__name">Prof. Maryam J</p>
+          </li>
+          <li class="instructors__item">
+            <img src="./imgs/in4.jpg" alt="" class="instructors__photo" />
+            <h3 class="instructor__position">Psycologist</h3>
+            <p class="instructor__name">Mr. Oluwole B.O</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section>
